--- a/package.json
+++ b/package.json
@@ -46,8 +46,10 @@
   "homepage": "https://github.com/plotly/react-pivottable#readme",
   "dependencies": {
     "immutability-helper": "^2.3.1",
+    "plotly.js": "^2.21.0",
     "prop-types": "^15.5.10",
     "react-draggable": "^3.0.3",
+    "react-pivottable": "^0.11.0",
     "react-sortablejs": "^1.3.4",
     "sortablejs": "^1.6.1"
   },
@@ -70,11 +72,11 @@
     "jest": "^21.2.1",
     "papaparse": "^4.3.6",
     "prettier": "^1.8.2",
-    "react": ">=15.0.0",
-    "react-dom": ">=15.0.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "react-dropzone": "^4.2.1",
     "react-hot-loader": "^3.1.1",
-    "react-plotly.js": "^2.0.0",
+    "react-plotly.js": "^2.6.0",
     "style-loader": "^0.19.0",
     "webpack": "^3.8.1",
     "webpack-dev-server": "^2.9.3"
